--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,14 @@
 # See https://www.dartlang.org/guides/libraries/private-files
 
-# Files and directories created by pub
+# Files and directories created by pub.
 .dart_tool/
 .packages
+
+# Conventional directory for build outputs.
 build/
-# If you're building an application, you may want to check-in your pubspec.lock
+
+# Omit committing pubspec.lock for library packages; see
+# https://dart.dev/guides/libraries/private-files#pubspeclock.
 pubspec.lock
 
 # Directory created by dartdoc
