--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ pubspec.lock
 
 # Directory created by dartdoc
 # If you don't generate documentation locally you can remove this line.
-doc/api/
+# doc/api/
 
 # dotenv environment variables file
 .env*
