--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,8 +10,8 @@ documentation: https://pub.dev/documentation/xtra/latest/
 environment:
   sdk: '>=2.18.0 <3.0.0'
 
-# dependencies:
-#   path: ^1.8.0
+dependencies:
+  xml: ^6.2.2
 
 dev_dependencies:
   lints: ^2.0.0
